--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
-    "mongodb": "^5.6.0",
+    "mongodb": "5.6.0",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   }
