--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "mongodb": "5.6.0",
+    "mongoose": "^7.4.1",
     "multer": "^1.4.5-lts.1",
+    "socket.io": "^4.7.1",
     "uuid": "^9.0.0"
   }
 }
