added email confirmation and fixed comments leak

--- a/.env
+++ b/.env
@@ -1,4 +1,6 @@
 CLOUDINARY_NAME=dzgay39yf
 CLOUDINARY_API_KEY=374443165734736
 CLOUDINARY_API_SECRET=KVy49G0Snzd7KXg4Zl0o6N8Iess
-SENDGRID_API_KEY=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 
+SENDGRID_API_KEY=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
+CLIENT_URL =https://imagestore-mu.vercel.app
+TEMP=http://localhost:3000   
