changed the api key for sendgrid

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 CLOUDINARY_NAME=dzgay39yf
 CLOUDINARY_API_KEY=374443165734736
 CLOUDINARY_API_SECRET=KVy49G0Snzd7KXg4Zl0o6N8Iess
-SENDGRID_API_KEY=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
+SENDGRID_API_KEY=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
 CLIENT_URL =https://imagestore-mu.vercel.app
 TEMP=http://localhost:3000   
